--- a/index (1).html
+++ b/index (1).html
@@ -29,6 +29,7 @@
         #result {
             margin-top: 20px;
             font-size: 3em;
+            font-weight: bold;
         }
     </style>
 </head>
